tests/valid/definite/ListEmpty_Valid_1.whiley
void f([int] xs):
    out->println(str(xs))

void System::main([string] args):
    f([1,4])
    f([])
