tests/invalid/ListEquals_Invalid_1.whiley

function f([int] xs) -> bool
requires xs != []:
    return true

method main() -> void:
    f([1, 4])
    f([])
